--- a/index.html
+++ b/index.html
@@ -1,27 +1,54 @@
 <!DOCTYPE html>
 <html>
-
-  <head><!-- where all the meta data will go, like and files we need to include -->
-    <title>My Little Rainbow</title><!-- the title is what appears on your tab -->
+  <head>
+    <link rel="stylesheet" href="./main.css">
   </head>
-
-  <body><!-- the body element is where everything we will see on the page will go -->
-
-    <!-- our soon to be beautiful rainbow! -->
-    <div> <!-- the grandest grandparent div -->
-      <div>
-        <div>
-          <div>
-            <div>
-              <div>
-                <div></div> <!-- the grandest child div -->
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
+  <body>
+    <!-- Your HTML content goes here -->
   </body>
-
+</html>
+<html>
+  <head>
+    <!-- Your CSS styles -->
+    <style>
+      div {
+        border: 20px solid #000;
+        display: inline-block;
+        min-width: 20em;
+        min-height: 25em;
+        border-radius: 50%;
+        border-left-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+      }
+    </style>
+    <!-- Link to external CSS file -->
+    <link rel="stylesheet" href="css/main.css">
+  </head>
+  <body>
+    <!-- Your HTML content goes here -->
+  </body>
+</html>
+    <div id="red">
+      <!-- Your content goes here -->
+    </div>
+    <div id="orange">
+      <!-- Your content goes here -->
+    </div>
+    <div id="yellow">
+      <!-- Your content goes here -->
+    </div>
+    <div id="green">
+      <!-- Your content goes here -->
+    </div>
+    <div id="blue">
+      <!-- Your content goes here -->
+    </div>
+    <div id="indigo">
+      <!-- Your content goes here -->
+    </div>
+    <div id="violet">
+      <!-- Your content goes here -->
+    </div>
+  </body>
 </html>
